Closure_31/evosuite/original/evosuite-report-org/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_31_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_31/Closure/evosuite/0/com/google/javascript/jscomp/Compiler_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_31/Closure/evosuite/0/com/google/javascript/jscomp/Compiler_ESTest.java >> evosuite-report-org/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_31/Closure/evosuite/0/com/google/javascript/jscomp/Compiler_ESTest.java:32: error: package com.google.javascript.jscomp.type does not exist
import com.google.javascript.jscomp.type.ReverseAbstractInterpreter;
                                        ^
/home/liumengjiao/Desktop/CI/Evosuite/Closure_31/Closure/evosuite/0/com/google/javascript/jscomp/Compiler_ESTest.java:1076: error: processAMDAndCommonJSModules() has private access in Compiler
      compiler0.processAMDAndCommonJSModules();
               ^
Note: /home/liumengjiao/Desktop/CI/Evosuite/Closure_31/Closure/evosuite/0/com/google/javascript/jscomp/Compiler_ESTest.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
